Changes in version 2.1.136
  o Account for colNameOpt = "rname" in the makeDF.R colSelect check
  o Remove call to open empty window on package load

Changes in version 2.1.135
  o Change the cast of integers from numeric to integer (Issue #30464)
  o labkey.selectRows updates for colSelect and showHidden properties (Issue #30465)
  o Fix for encoding extended characters in folderPath param (Issue #22034)

Changes in version 2.1.134
  o fix for getQueryDetails to get all column details instead of just default view column list
  o revert previous versions usage of fasttime library for date parsing

Changes in version 2.1.133
  o performance improvements for makeDF, using listToMatrix function
  o update date parser to use fasttime library for POSIXct function

Changes in version 2.1.132
  o fix for Issue 24231: support for date + time
  o add new table search filter param option: Q
  o fix issue with baseUrl parameter being overridden in labkey.saveBatch

Changes in version 2.1.131
  o fix for Issue 26956
  o added labkey.setDefaults support for baseUrl

Changes in version 2.1.130
  o makeFilter() operators may now be either upper or lower case (formerly upper case only)
  o added labkey.setDefaults and support for authentication via an API key

Changes in version 2.1.129
  o add parameter to selectRows for including display values for lookup fields in response

Changes in version 2.1.128
  o allow NA values in insertRows and importRows

Changes in version 2.1.127
  o change sslversion default values in curlOptions to TLSv1
  o fix to handle maxRows and rowOffset for labkey.executeSql
  o fix for labkey.getFolders includeSubfolders for non-Guest access
  o add additional parameters to existing functions (labkey.executeSql: colSort, parameters; labkey.selectRows: parameters; labkey.getFolders: includeEffectivePermissions)
  o updated user guide

Changes in version 2.1.126
  o change ssl.verifyhost default values in curlOptions from boolean to numeric