@@ -19,7 +19,7 @@ schema objects (\code{labkey.getSchema}).
 Package: \tab Rlabkey\cr
 Type: \tab Package\cr
 Version: \tab 2.1.136\cr
-Date: \tab 2017-08-07\cr
+Date: \tab 2017-10-12\cr
 License: \tab Apache License 2.0\cr
 LazyLoad: \tab yes\cr
 }
